objects/SFDC_Gecko_Platform_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Gecko_OS_Name__c</fullName>
        <label>Gecko OS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gecko_Platform_Name__c</fullName>
        <label>Gecko Platform Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfdc_platform_os_Name__c</fullName>
        <label>sfdc platform-os Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SFDC Gecko Platform Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>sfdc_platform_os_Name__c</columns>
        <columns>Gecko_Platform_Name__c</columns>
        <columns>Gecko_OS_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-G-{0000}</displayFormat>
        <label>SFDC Gecko Platform Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Gecko Platform Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>